--- a/appl/ftp/ftp/ftp.1
+++ b/appl/ftp/ftp/ftp.1
@@ -49,6 +49,7 @@ file transfer program
 .Op Fl i
 .Op Fl n
 .Op Fl g
+.Op Fl p
 .Op Ar host
 .Sh DESCRIPTION
 .Nm Ftp
@@ -89,6 +90,8 @@ and an account with which to login.
 .It Fl i
 Turns off interactive prompting during
 multiple file transfers.
+.It Fl p
+Turn on passive mode.
 .It Fl d
 Enables debugging.
 .It Fl g
