--- a/docs/manpages/testparm.1
+++ b/docs/manpages/testparm.1
@@ -5,7 +5,7 @@ testparm \- check an smb\&.conf configuration file for internal correctness
 .PP 
 .SH "SYNOPSIS" 
 .PP 
-\fBtestparm\fP [configfilename [hostname hostIP] ]
+\fBtestparm\fP [-s] [configfilename] [hostname hostIP]
 .PP 
 .SH "DESCRIPTION" 
 .PP 
@@ -26,6 +26,11 @@ reporting whether the specified host has access to each service\&.
 .PP 
 .SH "OPTIONS" 
 .PP 
+.IP 
+.IP "\fB-s\fP" 
+Without this option, \fBtestparm\fP will prompt for a
+carriage return after printing the service names and before dumping
+the service definitions\&.
 .IP 
 .IP "\fBconfigfilename\fP" 
 This is the name of the configuration file to
