--- a/examples/README
+++ b/examples/README
@@ -6,6 +6,6 @@ Samba.
 At a minimum please refer to the smb.conf.default file for current
 information regarding global and share parameter settings.
 
-Send additions to: samba-bugs@samba.anu.edu.au
+Send additions to: samba-bugs@samba.org
 
 
