--- a/packaging/PHT/TurboLinux/README
+++ b/packaging/PHT/TurboLinux/README
@@ -1,5 +1,5 @@
 Preparation Date: October 25, 1998
-Preparer:	  John H Terpstra <jht@samba.anu.edu.au>
+Preparer:	  John H Terpstra <jht@samba.org>
 
 Instructions:	Preparing Samba Packages for TurboLinux
 ===============================================================
