--- a/packaging/RedHat/README
+++ b/packaging/RedHat/README
@@ -1,5 +1,5 @@
 Preparation Date: Fri Aug 21, 1998
-Preparer:	  John H Terpstra <jht@samba.anu.edu.au>
+Preparer:	  John H Terpstra <jht@samba.org>
 
 Instructions:	Preparing Samba Packages for Red Hat Linux 5.X
 ===============================================================
