--- a/packaging/Caldera/README
+++ b/packaging/Caldera/README
@@ -1,5 +1,5 @@
 Preparation Date: Mon November 16 1998
-Preparer:	  John H Terpstra <jht@samba.anu.edu.au>
+Preparer:	  John H Terpstra <jht@samba.org>
 
 Instructions:	Preparing Samba Packages for Caldera OpenLinux 1.2
 ==================================================================
