--- a/lib/editline/ChangeLog
+++ b/lib/editline/ChangeLog
@@ -1,3 +1,7 @@
+Sun Nov 22 10:40:28 1998  Assar Westerlund  <assar@sics.se>
+
+	* Makefile.in (WFLAGS): set
+
 Tue Sep 29 02:09:15 1998  Assar Westerlund  <assar@sics.se>
 
 	* Makefile.in (LIB_DEPS): add LIB_tgetent
