--- a/lib/kafs/ChangeLog
+++ b/lib/kafs/ChangeLog
@@ -1,3 +1,7 @@
+Sun Nov 22 10:40:44 1998  Assar Westerlund  <assar@sics.se>
+
+	* Makefile.in (WFLAGS): set
+
 Sun Sep  6 20:16:27 1998  Assar Westerlund  <assar@sics.se>
 
 	* add new functionality for specifying the homedir to krb_afslog
