*** empty log message ***
git-svn-id: svn://svn.h5l.se/heimdal/trunk/heimdal@5236 ec53bebd-3082-4978-b11e-865c3cabbd6b

--- a/cf/ChangeLog
+++ b/cf/ChangeLog
@@ -1,3 +1,7 @@
+Sun Nov 22 12:16:06 1998  Assar Westerlund  <assar@sics.se>
+
+	* krb-struct-spwd.m4: new file
+
 Thu Jun  4 04:07:41 1998  Assar Westerlund  <assar@sics.se>
 
 	* find-func-no-libs2.m4: new file
