--- a/appl/push/ChangeLog
+++ b/appl/push/ChangeLog
@@ -1,3 +1,7 @@
+Sun Nov 22 15:33:52 1998  Johan Danielsson  <joda@hella.pdc.kth.se>
+
+	* push.c: eliminate some warnings
+
 Sun Nov 22 10:34:54 1998  Assar Westerlund  <assar@sics.se>
 
 	* Makefile.in (WFLAGS): set
