Updated the samba.anu.edu.au -> samba.org for the docs. Jeremy.

--- a/docs/manpages/nmblookup.1
+++ b/docs/manpages/nmblookup.1
@@ -1,4 +1,4 @@
-.TH NMBLOOKUP 1 "14 Nov 1998" "nmblookup 2.0.0-beta1"
+.TH "nmblookup " "1" "23 Oct 1998" "Samba" "SAMBA" 
 .PP 
 .SH "NAME" 
 nmblookup \- NetBIOS over TCP/IP client used to lookup NetBIOS names
@@ -115,9 +115,9 @@ which will return all registered names within a broadcast area\&.
 .PP 
 For example, running :
 .PP 
-\f(CWnmblookup -U samba\&.anu\&.edu\&.au -R IRIX#1B\'\fP
+\f(CWnmblookup -U samba\&.org -R IRIX#1B\'\fP
 .PP 
-would query the WINS server samba\&.anu\&.edu\&.au for the domain master
+would query the WINS server samba\&.org for the domain master
 browser (1B name type) for the IRIX workgroup\&.
 .PP 
 .SH "VERSION" 
@@ -132,7 +132,7 @@ This man page is correct for version 2\&.0 of the Samba suite\&.
 .SH "AUTHOR" 
 .PP 
 The original Samba software and related utilities were created by
-Andrew Tridgell \fIsamba-bugs@samba\&.anu\&.edu\&.au\fP\&. Samba is now developed
+Andrew Tridgell \fIsamba-bugs@samba\&.org\fP\&. Samba is now developed
 by the Samba Team as an Open Source project similar to the way the
 Linux kernel is developed\&.
 .PP 
@@ -141,7 +141,7 @@ sources were converted to YODL format (another excellent piece of Open
 Source software, available at
 \fBftp://ftp\&.icce\&.rug\&.nl/pub/unix/\fP)
 and updated for the Samba2\&.0 release by Jeremy Allison\&.
-\fIsamba-bugs@samba\&.anu\&.edu\&.au\fP\&.
+\fIsamba-bugs@samba\&.org\fP\&.
 .PP 
 See \fBsamba (7)\fP to find out how to get a full
 list of contributors and details on how to submit bug reports,
