--- a/docs/manpages/samba.7
+++ b/docs/manpages/samba.7
@@ -1,4 +1,4 @@
-.TH SAMBA 7 "14 Nov 1998" "samba 2.0.0-beta1"
+.TH "Samba " "7" "23 Oct 1998" "Samba" "" 
 .PP 
 .SH "NAME" 
 Samba \- A Windows SMB/CIFS fileserver for UNIX
@@ -20,7 +20,7 @@ described in a separate manual page\&. It is strongly recommended that
 you read the documentation that comes with Samba and the manual pages
 of those components that you use\&. If the manual pages aren\'t clear
 enough then please send a patch or bug report
-to \fIsamba-bugs@samba\&.anu\&.edu\&.au\fP\&.
+to \fIsamba-bugs@samba\&.org\fP\&.
 .PP 
 .IP 
 .IP "\fBsmbd\fP" 
@@ -102,7 +102,7 @@ file COPYING\&. You are encouraged to distribute copies of the Samba
 suite, but please obey the terms of this license\&.
 .PP 
 The latest version of the Samba suite can be obtained via anonymous
-ftp from samba\&.anu\&.edu\&.au in the directory pub/samba/\&. It is
+ftp from samba\&.org in the directory pub/samba/\&. It is
 also available on several mirror sites worldwide\&.
 .PP 
 You may also find useful information about Samba on the newsgroup
@@ -112,7 +112,7 @@ the mailing list are given in the README file that comes with Samba\&.
 If you have access to a WWW viewer (such as Netscape or Mosaic) then
 you will also find lots of useful information, including back issues
 of the Samba mailing list, at
-http://samba\&.anu\&.edu\&.au/samba/\&.
+http://samba\&.org/samba/\&.
 .PP 
 .SH "VERSION" 
 .PP 
@@ -121,13 +121,13 @@ This man page is correct for version 2\&.0 of the Samba suite\&.
 .SH "CONTRIBUTIONS" 
 .PP 
 If you wish to contribute to the Samba project, then I suggest you
-join the Samba mailing list at \fIsamba@samba\&.anu\&.edu\&.au\fP\&. See the
+join the Samba mailing list at \fIsamba@samba\&.org\fP\&. See the
 Web page at
-http://samba\&.anu\&.edu\&.au/listproc
+http://samba\&.org/listproc
 for details on how to do this\&.
 .PP 
 If you have patches to submit or bugs to report then you may mail them
-directly to \fIsamba-bugs@samba\&.anu\&.edu\&.au\fP\&. Note, however, that due to
+directly to \fIsamba-bugs@samba\&.org\fP\&. Note, however, that due to
 the enormous popularity of this package the Samba Team may take some
 time to respond to mail\&. We prefer patches in \fIdiff -u\fP format\&.
 .PP 
@@ -135,21 +135,21 @@ time to respond to mail\&. We prefer patches in \fIdiff -u\fP format\&.
 .PP 
 Contributors to the project are now too numerous to mention here but
 all deserve the thanks of all Samba users\&. To see a full list, look at
-ftp://samba\&.anu\&.edu\&.au/pub/samba/alpha/change-log
+ftp://samba\&.org/pub/samba/alpha/change-log
 for the pre-CVS changes and at
-ftp://samba\&.anu\&.edu\&.au/pub/samba/alpha/cvs\&.log
+ftp://samba\&.org/pub/samba/alpha/cvs\&.log
 for the contributors to Samba post-CVS\&. CVS is the Open Source source
 code control system used by the Samba Team to develop Samba\&. The
 project would have been unmanageable without it\&.
 .PP 
 In addition, several commercial organizations now help fund the Samba
 Team with money and equipment\&. For details see the Samba Web pages at
-http://samba\&.anu\&.edu\&.au/samba/samba-thanks\&.html\&.
+http://samba\&.org/samba/samba-thanks\&.html\&.
 .PP 
 .SH "AUTHOR" 
 .PP 
 The original Samba software and related utilities were created by
-Andrew Tridgell \fIsamba-bugs@samba\&.anu\&.edu\&.au\fP\&. Samba is now developed
+Andrew Tridgell \fIsamba-bugs@samba\&.org\fP\&. Samba is now developed
 by the Samba Team as an Open Source project similar to the way the
 Linux kernel is developed\&.
 .PP 
@@ -158,4 +158,4 @@ sources were converted to YODL format (another excellent piece of Open
 Source software, available at
 \fBftp://ftp\&.icce\&.rug\&.nl/pub/unix/\fP)
 and updated for the Samba2\&.0 release by Jeremy Allison\&.
-\fIsamba-bugs@samba\&.anu\&.edu\&.au\fP\&.
+\fIsamba-bugs@samba\&.org\fP\&.
