--- a/docs/manpages/smbclient.1
+++ b/docs/manpages/smbclient.1
@@ -1,4 +1,4 @@
-.TH SMBCLIENT 1 "14 Nov 1998" "smbclient 2.0.0-beta1"
+.TH "smbclient " "1" "23 Oct 1998" "Samba" "SAMBA" 
 .PP 
 .SH "NAME" 
 smbclient \- ftp-like client to access SMB/CIFS resources on servers
@@ -358,13 +358,13 @@ get their creation dates restored properly\&.
 Include files and directories\&. Is the default
 behavior when filenames are specified above\&. Causes tar files to
 be included in an extract or create (and therefore everything else to
-be excluded)\&. See example below\&.  Filename globbing does not work for
-included files for extractions (yet)\&.
+be excluded)\&. See example below\&.  Filename globbing works 
+in one of two ways\&.  See \fBr\fP below\&.
 .IP 
 .IP "\fBX\fP" 
 Exclude files and directories\&. Causes tar files to
 be excluded from an extract or create\&. See example below\&.  Filename
-globbing does not work for excluded files (yet)\&.
+globbing works in one of two ways now\&. See \fBr\fP below\&.
 .IP 
 .IP "\fBb\fP" 
 Blocksize\&. Must be followed by a valid (greater than
@@ -378,6 +378,13 @@ archive bit set\&. Useful only with the \fBc\fP flag\&.
 .IP "\fBq\fP" 
 Quiet\&. Keeps tar from printing diagnostics as it
 works\&.  This is the same as tarmode quiet\&.
+.IP 
+.IP "\fBr\fP" 
+Regular expression include or exclude\&.  Uses regular 
+regular expression matching for excluding or excluding files if 
+compiled with HAVE_REGEX_H\&. However this mode can be very slow\&. If 
+not compiled with HAVE_REGEX_H, does a limited wildcard match on * and 
+?\&.
 .IP 
 .IP "\fBN\fP" 
 Newer than\&. Must be followed by the name of a file
@@ -751,7 +758,7 @@ This man page is correct for version 2\&.0 of the Samba suite\&.
 .SH "AUTHOR" 
 .PP 
 The original Samba software and related utilities were created by
-Andrew Tridgell \fIsamba-bugs@samba\&.anu\&.edu\&.au\fP\&. Samba is now developed
+Andrew Tridgell \fIsamba-bugs@samba\&.org\fP\&. Samba is now developed
 by the Samba Team as an Open Source project similar to the way the
 Linux kernel is developed\&.
 .PP 
@@ -760,7 +767,7 @@ sources were converted to YODL format (another excellent piece of Open
 Source software, available at
 \fBftp://ftp\&.icce\&.rug\&.nl/pub/unix/\fP)
 and updated for the Samba2\&.0 release by Jeremy Allison\&.
-\fIsamba-bugs@samba\&.anu\&.edu\&.au\fP\&.
+\fIsamba-bugs@samba\&.org\fP\&.
 .PP 
 See \fBsamba (7)\fP to find out how to get a full
 list of contributors and details on how to submit bug reports,
