--- a/docs/manpages/smb.conf.5
+++ b/docs/manpages/smb.conf.5
@@ -1,4 +1,4 @@
-.TH SMB.CONF 5 "14 Nov 1998" "smb.conf 2.0.0-beta1"
+.TH "smb\&.conf " "5" "23 Oct 1998" "Samba" "SAMBA" 
 .PP 
 .SH "NAME" 
 smb\&.conf \- The configuration file for the Samba suite
@@ -378,7 +378,7 @@ negotiation\&. It can be one of CORE, COREPLUS, LANMAN1, LANMAN2 or NT1\&.
 machine\&. Only some are recognized, and those may not be 100%
 reliable\&. It currently recognizes Samba, WfWg, WinNT and
 Win95\&. Anything else will be known as "UNKNOWN"\&. If it gets it wrong
-then sending a level 3 log to \fIsamba-bugs@samba\&.anu\&.edu\&.au\fP
+then sending a level 3 log to \fIsamba-bugs@samba\&.org\fP
 should allow it to be fixed\&.
 .IP 
 .IP o 
@@ -2014,7 +2014,7 @@ Samba NT Domain Controller Code\&. It may be removed in a later release\&.
 To work with the latest code builds that may have more support for
 Samba NT Domain Controller functionality please subscribe to the
 mailing list \fBSamba-ntdom\fP available by sending email to
-\fIlistproc@samba\&.anu\&.edu\&.au\fP
+\fIlistproc@samba\&.org\fP
 .IP 
 .IP "\fBdomain admin users (G)\fP" 
 .IP 
@@ -2023,7 +2023,7 @@ Samba NT Domain Controller Code\&. It may be removed in a later release\&.
 To work with the latest code builds that may have more support for
 Samba NT Domain Controller functionality please subscribe to the
 mailing list \fBSamba-ntdom\fP available by sending email to
-\fIlistproc@samba\&.anu\&.edu\&.au\fP
+\fIlistproc@samba\&.org\fP
 .IP 
 .IP "\fBdomain controller (G)\fP" 
 .IP 
@@ -2038,7 +2038,7 @@ Samba NT Domain Controller Code\&. It may be removed in a later release\&.
 To work with the latest code builds that may have more support for
 Samba NT Domain Controller functionality please subscribe to the
 mailing list \fBSamba-ntdom\fP available by sending email to
-\fIlistproc@samba\&.anu\&.edu\&.au\fP
+\fIlistproc@samba\&.org\fP
 .IP 
 .IP "\fBdomain guest group (G)\fP" 
 .IP 
@@ -2047,7 +2047,7 @@ Samba NT Domain Controller Code\&. It may be removed in a later release\&.
 To work with the latest code builds that may have more support for
 Samba NT Domain Controller functionality please subscribe to the
 mailing list \fBSamba-ntdom\fP available by sending email to
-\fIlistproc@samba\&.anu\&.edu\&.au\fP
+\fIlistproc@samba\&.org\fP
 .IP 
 .IP "\fBdomain guest users (G)\fP" 
 .IP 
@@ -2056,7 +2056,7 @@ Samba NT Domain Controller Code\&. It may be removed in a later release\&.
 To work with the latest code builds that may have more support for
 Samba NT Domain Controller functionality please subscribe to the
 mailing list \fBSamba-ntdom\fP available by sending email to
-\fIlistproc@samba\&.anu\&.edu\&.au\fP
+\fIlistproc@samba\&.org\fP
 .IP 
 .IP "\fBdomain logons (G)\fP" 
 .IP 
@@ -5139,7 +5139,7 @@ You may find that on some systems Samba will say "Unknown socket
 option" when you supply an option\&. This means you either incorrectly 
 typed it or you need to add an include file to includes\&.h for your OS\&. 
 If the latter is the case please send the patch to
-\fIsamba-bugs@samba\&.anu\&.edu\&.au\fP\&.
+\fIsamba-bugs@samba\&.org\fP\&.
 .IP 
 Any of the supported socket options may be combined in any way you
 like, as long as your OS allows it\&.
@@ -6231,7 +6231,7 @@ This man page is correct for version 2\&.0 of the Samba suite\&.
 .SH "AUTHOR" 
 .IP 
 The original Samba software and related utilities were created by
-Andrew Tridgell \fIsamba-bugs@samba\&.anu\&.edu\&.au\fP\&. Samba is now developed
+Andrew Tridgell \fIsamba-bugs@samba\&.org\fP\&. Samba is now developed
 by the Samba Team as an Open Source project similar to the way the
 Linux kernel is developed\&.
 .IP 
@@ -6240,7 +6240,7 @@ sources were converted to YODL format (another excellent piece of Open
 Source software, available at
 \fBftp://ftp\&.icce\&.rug\&.nl/pub/unix/\fP)
 and updated for the Samba2\&.0 release by Jeremy Allison\&.
-\fIsamba-bugs@samba\&.anu\&.edu\&.au\fP\&.
+\fIsamba-bugs@samba\&.org\fP\&.
 .IP 
 See \fBsamba (7)\fP to find out how to get a full
 list of contributors and details on how to submit bug reports,
