--- a/docs/manpages/smbpasswd.5
+++ b/docs/manpages/smbpasswd.5
@@ -1,4 +1,4 @@
-.TH SMBPASSWD 5 "14 Nov 1998" "smbpasswd 2.0.0-beta1"
+.TH "smbpasswd " "5" "23 Oct 1998" "Samba" "SAMBA" 
 .PP 
 .SH "NAME" 
 smbpasswd \- The Samba encrypted password file
@@ -198,7 +198,7 @@ algorithm\&.
 .SH "AUTHOR" 
 .PP 
 The original Samba software and related utilities were created by
-Andrew Tridgell \fIsamba-bugs@samba\&.anu\&.edu\&.au\fP\&. Samba is now developed
+Andrew Tridgell \fIsamba-bugs@samba\&.org\fP\&. Samba is now developed
 by the Samba Team as an Open Source project similar to the way the
 Linux kernel is developed\&.
 .PP 
@@ -207,7 +207,7 @@ sources were converted to YODL format (another excellent piece of Open
 Source software, available at
 \fBftp://ftp\&.icce\&.rug\&.nl/pub/unix/\fP) 
 and updated for the Samba2\&.0 release by Jeremy
-Allison, \fIsamba-bugs@samba\&.anu\&.edu\&.au\fP\&.
+Allison, \fIsamba-bugs@samba\&.org\fP\&.
 .PP 
 See \fBsamba (7)\fP to find out how to get a full
 list of contributors and details on how to submit bug reports,
