--- a/docs/manpages/smbmount.8
+++ b/docs/manpages/smbmount.8
@@ -1,4 +1,4 @@
-.TH SMBMOUNT 8 "14 Nov 1998" "smbmount 2.0.0-beta1"
+.TH SMBMOUNT 8 "24 Nov 1998" "smbmount 2.0.0beta2"
 .SH NAME
 smbmount \- mount smb file system
 .SH SYNOPSIS
