--- a/docs/manpages/testprns.1
+++ b/docs/manpages/testprns.1
@@ -1,4 +1,4 @@
-.TH "testprns " "1" "23 Oct 1998" "Samba" "SAMBA" 
+.TH TESTPRNS 1 "24 Nov 1998" "testprns 2.0.0beta2"
 .PP 
 .SH "NAME" 
 testprns \- check printer name for validity with smbd 
