--- a/docs/manpages/smbmnt.8
+++ b/docs/manpages/smbmnt.8
@@ -1,4 +1,4 @@
-.TH SMBMNT 8 "14 Nov 1998" "smbmnt 2.0.0-beta1"
+.TH SMBMNT 8 "24 Nov 1998" "smbmnt 2.0.0beta2"
 .SH NAME
 smbmnt \- mount smb file system
 .SH SYNOPSIS
