--- a/docs/manpages/smbumount.8
+++ b/docs/manpages/smbumount.8
@@ -1,4 +1,4 @@
-.TH SMBUMOUNT 8 "14 Nov 1998" "smbumount 2.0.0-beta1"
+.TH SMBUMOUNT 8 "24 Nov 1998" "smbumount 2.0.0beta2"
 .SH NAME
 smbumount \- umount for normal users
 .SH SYNOPSIS
